5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1846_1277.log
== TEST (2019-06-25 11:10:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))

tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
print(tempo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:19:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a = shape(tempo)[0]
if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1

print(v1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:23:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a = shape(tempo)[0]
if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:23:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
a = shape(tempo)[0]
if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- EXECUTION TIME:
0.77936
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1277/main.py", line 38, in <module>
    b = tempo[v1,v2]
IndexError: index 777 is out of bounds for axis 0 with size 7

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:24:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:24:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:25:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:26:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:27:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:27:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:29:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(tempo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:31:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
else:
	v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
else:
		v2 == 6

b = tempo[v1,v2]
print(b)
-- EXECUTION TIME:
1.15017
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1277/main.py", line 38, in <module>
    b = tempo[v1,v2]
IndexError: index 777 is out of bounds for axis 0 with size 7

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:32:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
else:
	v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
else:
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:32:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
else:
	v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
else:
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:32:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
else:	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
File "XXXX", line 35
    else:	(v2 == 777):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:32:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:36:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:36:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:36:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:37:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:37:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:37:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:37:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:37:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:39:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
	elif	(v1== 222):
			v1 = 1
	elif	(v1 == 333):
			v1 == 2
	elif	(v1== 444):
			v1 = 3
	elif	(v1 == 555):
			v1 == 4
	elif	(v1== 666):
			v1 = 5
	elif	(v1 == 777):
			v1 == 6
		
if	(v2 == 111 ):
			v2 = 0
	elif	(v2== 222):
			v2 = 1
	elif	(v2 == 333):
			v2 == 2
	elif	(v2== 444):
			v2 = 3
	elif	(v2 == 555):
			v2 == 4
	elif	(v2== 666):
			v2 = 5
	elif	(v2 == 777):
			v2 == 6

b = tempo[v1,v2]
print(b)
-- EXECUTION TIME:
0.632306
-- ERROR:
  File "/home/codebench/codes/1846/1277/main.py", line 10
    elif	(v1== 222):
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:39:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
	elif	(v1== 222):
			v1 = 1
	elif	(v1 == 333):
			v1 == 2
	elif	(v1== 444):
			v1 = 3
	elif	(v1 == 555):
			v1 == 4
	elif	(v1== 666):
			v1 = 5
	elif	(v1 == 777):
			v1 == 6
		
if	(v2 == 111 ):
			v2 = 0
	elif	(v2== 222):
			v2 = 1
	elif	(v2 == 333):
			v2 == 2
	elif	(v2== 444):
			v2 = 3
	elif	(v2 == 555):
			v2 == 4
	elif	(v2== 666):
			v2 = 5
	elif	(v2 == 777):
			v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
File "XXXX", line 10
    elif	(v1== 222):
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:40:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- EXECUTION TIME:
1.21748
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1277/main.py", line 38, in <module>
    b = tempo[v1,v2]
IndexError: index 777 is out of bounds for axis 0 with size 7

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 11:12:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 == 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 == 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 == 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 == 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 == 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 == 6

b = tempo[v1,v2]
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 11:13:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = int(input("Digite a primeira cidade: "))
v2 = int(input("Digite a segunda cidade: "))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

if	(v1 == 111 ):
		v1 = 0
elif	(v1== 222):
		v1 = 1
elif	(v1 == 333):
		v1 = 2
elif	(v1== 444):
		v1 = 3
elif	(v1 == 555):
		v1 = 4
elif	(v1== 666):
		v1 = 5
elif	(v1 == 777):
		v1 = 6
		
if	(v2 == 111 ):
		v2 = 0
elif	(v2== 222):
		v2 = 1
elif	(v2 == 333):
		v2 = 2
elif	(v2== 444):
		v2 = 3
elif	(v2 == 555):
		v2 = 4
elif	(v2== 666):
		v2 = 5
elif	(v2 == 777):
		v2 = 6

b = tempo[v1,v2]
print(b)
-- EXECUTION TIME:
1.15621
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
